#pragma once

#include "public.h"

#include <yt/yt/core/rpc/public.h>

namespace NYT::NRpc::NGrpc {

////////////////////////////////////////////////////////////////////////////////

NRpc::IServerPtr CreateServer(TServerConfigPtr config);

////////////////////////////////////////////////////////////////////////////////

} // namespace NYT::NRpc::NGrpc
